<resources>
<string name="app_version">"Version"</string>
<string name="settings">"Settings"</string>
<string name="game_manual">"Manual"</string>
<string name="game_score">"Score"</string>
<string name="game_time">"Time"</string>
<string name="game_cancel">"Cancel"</string>
<string name="game_confirm">"Confirm"</string>
<string name="game_auto_complete_text">"Autocomplete"</string>
<string name="game_press_again">"Press again to exit"</string>
<string name="game_load_error">"Loading data failed, starting new game…"</string>
<string name="game_close">"Close game"</string>
<string name="game_main_menu">"Main menu"</string>
<string name="item_game_rules">"Game rules"</string>
<string name="item_return_to_main_menu">"Return to main menu"</string>
<string name="menu_undo">"Undo"</string>
<string name="menu_main_menu">"Menu"</string>
<string name="menu_settings">"Settings"</string>
<string name="games_Klondike">"Klondike"</string>
<string name="games_Freecell">"FreeCell"</string>
<string name="games_Yukon">"Yukon"</string>
<string name="games_Spider">"Spider"</string>
<string name="games_SimpleSimon">"Simple Simon"</string>
<string name="games_Golf">"Golf"</string>
<string name="games_Pyramid">"Pyramid"</string>
<string name="games_TriPeaks">"TriPeaks"</string>
<string name="games_FortyEight">"Forty &amp; Eight"</string>
<string name="games_AcesUp">"Aces Up"</string>
<string name="games_Gypsy">"Gypsy"</string>
<string name="games_mod3">"Mod3"</string>
<string name="games_Canfield">"Canfield"</string>
<string name="games_GrandfathersClock">"Grandfather's Clock"</string>
<string name="games_Vegas">"Vegas"</string>
<string name="games_Calculation">"Calculation"</string>
<string name="blue">"Blue"</string>
<string name="green">"Green"</string>
<string name="red">"Red"</string>
<string name="yellow">"Yellow"</string>
<string name="orange">"Orange"</string>
<string name="purple">"Purple"</string>
<string name="game_longest_run">"Longest sequence:"</string>
<string name="dialog_win_titel">"Congratulations!"</string>
<string name="dialog_win_score">"Score: %1$d"</string>
<string name="dialog_win_bonus">"Bonus: %1$d"</string>
<string name="dialog_win_total">"Total: %1$d"</string>
<string name="dialog_mix_cards_title">"Mix cards"</string>
<string name="dialog_mix_cards_text">"This will shuffle all cards, except correct sequences and cards on the foundation."</string>
<string name="dialog_mix_cards_not_available">"There are still possible moves!"</string>
<string name="dialog_start_new_game_title">"Start new game"</string>
<string name="dialog_start_new_game_text">"Your current progress will be lost and a new random game will be dealt."</string>
<string name="dialog_redeal_title">"Give cards again"</string>
<string name="dialog_redeal_text">"Your current progress will be lost, but the cards are dealt like in the current game."</string>
<string name="title_activity_manual">"Manual"</string>
<string name="title_activity_settings">"Settings"</string>
<string name="title_activity_about">"About Game"</string>
<string name="title_activity_statistics">"Statistics"</string>
<string name="about_tab_1">"Information"</string>
<string name="about_tab_2">"Licenses"</string>
<string name="about_tab_3">"Changelog"</string>
<string name="about_loading">"Loading…"</string>
<string name="about_developer">"Developer"</string>
<string name="about_developer_name">"Tobias Bielefeld"</string>
<string name="about_compiled">"Compiled on"</string>
<string name="about_source_code">"Source code"</string>
<string name="about_license">"License"</string>
<string name="about_translations">"Translations"</string>
<string name="about_further_contributors">"Further contributors"</string>
<string name="about_android_support_libraries_title">"Android support library"</string>
<string name="about_android_support_libraries_usage">"Used for better design and easier development"</string>
<string name="about_material_icons_title">"Material design icons"</string>
<string name="about_material_icons_usage">"Used for all icons in this application"</string>
<string name="about_card_themes_title">"Card themes"</string>
<string name="about_card_themes_usage">"The card themes were taken from &lt;a href=https://pixabay.com/&gt;pixabay.com&lt;/a&gt;, for detailed information click &lt;a href=https://github.com/TobiasBielefeld/Simple-Solitaire/blob/master/pictures/cards/LICENSES.txt&gt;here&lt;/a&gt;"</string>
<string name="about_poker_themes_usage">"Used as Poker theme - Available on &lt;a href=https://sourceforge.net/projects/vector-cards/&gt;sourceforge.net&lt;/a&gt; - Copyright 2015 - Chris Aguilar - conjurenation@gmail.com"</string>
<string name="about_custom_color_picker_title">"AmbilWarna library"</string>
<string name="about_custom_color_picker_usage">"Used for the custom color picker"</string>
<string name="about_sounds_title">"Sounds"</string>
<string name="about_sounds_usage">"All sounds were originally published on &lt;a href=https://freesound.org&gt;freesound.org&lt;/a&gt;, for detailed information click &lt;a href=https://github.com/TobiasBielefeld/Simple-Solitaire/blob/master/sounds/readme.txt&gt;here&lt;/a&gt;"</string>
<string name="about_sliding_tabs_title">"PagerSlidingTabStrip library"</string>
<string name="about_sliding_tabs_usage">"Used for the tabs in the \"About game\" screen"</string>
<string name="manual_games">"Games"</string>
<string name="manual_feedback">"Feedback"</string>
<string name="manual_startpage">"Start page"</string>
<string name="manual_back_to_game">"Back to game"</string>
<string name="manual_structure">"Structure"</string>
<string name="manual_objective">"Objective"</string>
<string name="manual_rules">"Rules"</string>
<string name="manual_scoring">"Scoring"</string>
<string name="manual_main_menu">"Main menu"</string>
<string name="manual_ui">"User interface"</string>
<string name="page_load_error">"No page for this game available…"</string>
<string name="manual_bonus">"After winning a game, you get a bonus: The faster you win, the higher the bonus will be."</string>
<string name="manual_open_google_play">"Open Google Play"</string>
<string name="manual_open_github">"Open GitHub Repo"</string>
<string name="manual_games_text1">"Choose a game to show its structure, objective, rules and scoring."</string>
<string name="manual_startpage_text">"Welcome to the manual of this game collection! I hope it will explain everything. 

Use the menu on the left side to access the other manual pages."</string>
<string name="manual_general_main_menu">"The usage of the main menu is relatively simple. Just tap on a game to start it. 

The app will automatically load the last played game on a restart, if the app was paused in it. This behavior can be disabled in the settings under \"General\".

In the settings, you can also find the section \"Main menu\", where it's possible to hide and reorder games in the menu and change the number of columns, so more games fit on the screen at once."</string>
<string name="manual_ui_text">"A game will always show a little menu on the bottom part of the screen (Portrait mode) or on the right side (Landscape mode). It will also show the current score and current played time of the game. If possible, these two values will be saved for the high-score list. The menu contains 5 items, which have the following effects (buttons from left to right):

The \"Scores\" button will show a new window with the high scores and the count of won games of the current game.

The \"Hint\" button will help you by showing up to 3 possible card movements at once. But this will decrease the current score by 25. Notice that trivial movements like moving every card to an empty field or pressing on the main stack aren't shown as a hint. If no hint was shown, the score won't decrease.

The \"Menu\" button shows three different actions: Start a new game by mixing the cards and drawing a new deal. Give cards again will do the same but without the mixing. So it's like a restart of the current game. The last option will end the current game and return the app to the main menu.

The \"Undo\" button will revert the last movement, but this will cost 25 points. This can be used for up to 20 last movements.

The \"Settings\" button simply opens the settings menu."</string>
<string name="manual_feedback_text">"Found a bug or an error? Something I should improve? Should I add another game to the collection? Maybe you want to help with some translations? Or have another idea?

I am happy to receive any kind of feedback. If you feel the need to contact me, you should consider the following two options:

Use the Issue Tracker on GitHub: The project of this app on GitHub has a neat function to report issues. Just click on the button on the left side of the screen to open the Issue Tracker with the Internet browser.

Use a rating in Google Play: Just leave a rating on the page from this app and write anything you want in it. Click on the button to the right side to open the Google Play Store (if installed).

Thank you in advance for your feedback :)"</string>
<string name="manual_Klondike_structure">"1 deck of 52 cards.

7 tableau stacks, 4 foundation stacks, 1 main and 1 discard stack."</string>
<string name="manual_Klondike_objective">"Order every card in real families in ascending order on the foundation."</string>
<string name="settings_customization">"Appearance"</string>
<string name="settings_other">"General"</string>
<string name="settings_other_description">"Set all other settings"</string>
<string name="settings_games">"Games"</string>
<string name="settings_games_description">"Set preferences for the game variants"</string>
<string name="settings_double_tap">"Double-Tap"</string>
<string name="settings_double_tap_enable">"Enable double tap movements"</string>
<string name="settings_double_tap_enable_text">"Press a card twice to move it to the next possible stack"</string>
<string name="settings_double_tap_all_cards">"Move all possible cards"</string>
<string name="settings_double_tap_all_cards_text">"Move as many cards as possible from the stack, not only the touched card"</string>
<string name="settings_tap_to_select">"Tap-To-Select"</string>
<string name="settings_tap_to_select_enable">"Enable Tap-To-Select movements"</string>
<string name="settings_tap_to_select_enable_text">"Tap on a card to select it, then tap the destination stack to move it there"</string>
<string name="settings_single_tap">"Single-Tap"</string>
<string name="settings_single_tap_enable_text">"Only for Golf and TriPeaks: Press a card once to move it to the discard stack"</string>
<string name="settings_double_tap_foundation_first">"Move to foundation stack first"</string>
<string name="settings_double_tap_foundation_first_text">"Try to move the top card of the tapped stack to the foundation, before moving the other cards"</string>
<string name="settings_customization_description">"Customize cards, backgrounds and user interface"</string>
<string name="settings_single_tap_enable">"Enable Single-Tap movements"</string>
<string name="settings_single_tap_all_games_text">"Press a card once to move it to the next possible stack. It follows the same settings as Double-Tap movements. This will disable Tap-To-Select movements."</string>
<string name="settings_expert_settings">"Expert settings"</string>
<string name="settings_expert_settings_text">"May be useful for some people"</string>
</resources>