<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_double_tap">
        <com.ardently.love.delightgame.classes.CustomCheckBoxPreference
            android:defaultValue="@bool/default_double_tap_enable"
            android:key="@string/pref_key_double_tap_enable"
            android:summary="@string/settings_double_tap_enable_text"
            android:title="@string/settings_double_tap_enable" />

        <com.ardently.love.delightgame.classes.CustomCheckBoxPreference
            android:defaultValue="@bool/default_double_tap_all_cards"
            android:dependency="@string/pref_key_double_tap_enable"
            android:key="@string/pref_key_double_tap_all_cards"
            android:summary="@string/settings_double_tap_all_cards_text"
            android:title="@string/settings_double_tap_all_cards" />

        <com.ardently.love.delightgame.classes.CustomCheckBoxPreference
            android:defaultValue="@bool/default_double_tap_foundation_first"
            android:dependency="@string/pref_key_double_tap_all_cards"
            android:key="@string/pref_key_double_tap_foundation_first"
            android:summary="@string/settings_double_tap_foundation_first_text"
            android:title="@string/settings_double_tap_foundation_first" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings_tap_to_select">
        <com.ardently.love.delightgame.classes.CustomCheckBoxPreference
            android:defaultValue="@bool/default_tap_to_select_enable"
            android:key="@string/pref_key_tap_to_select_enable"
            android:summary="@string/settings_tap_to_select_enable_text"
            android:title="@string/settings_tap_to_select_enable" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_single_tap">
        <com.ardently.love.delightgame.classes.CustomCheckBoxPreference
            android:defaultValue="@bool/default_single_tap_all_games"
            android:key="@string/pref_key_single_tap_all_games"
            android:summary="@string/settings_single_tap_all_games_text"
            android:title="@string/settings_single_tap_enable" />

        <com.ardently.love.delightgame.classes.CustomCheckBoxPreference
            android:defaultValue="@bool/default_single_tap_enable"
            android:key="@string/pref_key_single_tap_special_games"
            android:summary="@string/settings_single_tap_enable_text"
            android:title="@string/settings_single_tap_enable" />
    </PreferenceCategory>


</PreferenceScreen>
