<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.ardently.love.delightgame.ui.settings.Settings$CustomizationPreferenceFragment"
        android:summary="@string/settings_customization_description"
        android:title="@string/settings_customization" />

    <header
        android:summary="@string/settings_games_description"
        android:title="@string/settings_games">

        <intent
            android:targetClass="com.ardently.love.delightgame.ui.settings.SettingsGames"
            android:targetPackage="com.ardently.love.delightgame" />
    </header>

    <header
        android:fragment="com.ardently.love.delightgame.ui.settings.Settings$OtherPreferenceFragment"
        android:summary="@string/settings_other_description"
        android:title="@string/settings_other" />

    <header
        android:fragment="com.ardently.love.delightgame.ui.settings.Settings$ExpertSettingsPreferenceFragment"
        android:summary="@string/settings_expert_settings_text"
        android:title="@string/settings_expert_settings" />


</preference-headers>